--- a/Portfolio Site/deploy/index.html
+++ b/Portfolio Site/deploy/index.html
@@ -15,13 +15,21 @@
 <body>
 
     <header>
-        
+        <div>
+            <section id="logo-container">
+                <img src="img/header/logo.svg">
+            </section>
+            <section id="burger-container">
+                <i class="fas fa-bars"></i>
+            </section>
+        </div>
     </header>
     <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
             <!-- Greensock -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
         <script src="js/scripts-min.js"></script>
+    
 
 </body>
 
