--- a/Portfolio Site/deploy/index.html
+++ b/Portfolio Site/deploy/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header>
+        <header class=".grid-container">
         <div>
             <section id="logo-container">
                 <img src="img/header/logo.svg">
