--- a/Portfolio Site/deploy/index.html
+++ b/Portfolio Site/deploy/index.html
@@ -29,25 +29,23 @@
             <!-- Greensock -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
         <script src="js/scripts-min.js"></script>
-    <footer>
+    <section class="content-spacing">
                 <div>
-                    <ul>
-                        <li></li>
-                        <li><a href="www.linkedin.com/in/kelsey-hendry" target="_blank"></a><i class="fab fa-linkedin-in"></i></li>
-                        <li><a href="https://github.com/K-Hendry" target="_blank"></a><i class="fab fa-github"></i></li>
-                        <li><a href="mailto: k.hendry.design@gmail.com" target="_blank"></a><i class="fas fa-envelope-open"></i></li>
-                        <li><a href="https://www.instagram.com/khendry_designs/" target="_blank"></a><i class="fab fa-instagram"></i></li>
-                        <li></li>
-                    </ul>
+                    <h2>like what you see? follow for more.</h2>
                 </div>
-            </footer>
-            
-    <section id="about">
-                    <div id="content">
-                        <h2>behind the screens</h2>
+    <footer>
+                    <div>
+                        <ul>
+                            <li></li>
+                            <li><a href="www.linkedin.com/in/kelsey-hendry" target="_blank"></a><i class="fab fa-linkedin-in"></i></li>
+                            <li><a href="https://github.com/K-Hendry" target="_blank"></a><i class="fab fa-github"></i></li>
+                            <li><a href="mailto: k.hendry.design@gmail.com" target="_blank"></a><i class="fas fa-envelope-open"></i></li>
+                            <li><a href="https://www.instagram.com/khendry_designs/" target="_blank"></a><i class="fab fa-instagram"></i></li>
+                            <li></li>
+                        </ul>
                     </div>
-                </section>
-
+                </footer>
+                
 
 </body>
 
