--- a/Portfolio Site/deploy/index.html
+++ b/Portfolio Site/deploy/index.html
@@ -16,30 +16,44 @@
 
         <header class=".grid-container">
         <div>
+            <section id="name">
+                <p>K Hendry Art & Design</p>
+            </section>
             <section id="logo-container">
-                <img src="img/header/logo.svg">
+                <img src="img/header/logo.svg" alt="logo">
             </section>
             <section id="burger-container">
                 <i class="fas fa-bars"></i>
             </section>
+            <nav id="nav-container" data-nav="main-navigation">
+                <ul>
+                    <li><a href="section-2">home</a></li>
+                    <li><a href="section-4">about</a></li>
+                    <li><a href="section-5">portfolio</a></li>
+                    <li><a href="section-6">instagram</a></li>
+                    <li><a href="section-8">contact</a></li>
+                </ul>
+            </nav>
         </div>
+        <div id="header-triangle"></div>
     </header>
     <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
             <!-- Greensock -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
         <script src="js/scripts-min.js"></script>
-    <section class="content-spacing">
+    <section class="content-spacing" id="instagram">
                 <div>
                     <h2>like what you see? follow for more.</h2>
                 </div>
-    <footer>
+            </section>
+    <footer class="content-spacing">
+                    <div id="footer-triangle"><img src="img/footer/white-logo.svg" alt="logo"></div>
                     <div>
                         <ul>
-                            <li></li>
                             <li><a href="www.linkedin.com/in/kelsey-hendry" target="_blank"></a><i class="fab fa-linkedin-in"></i></li>
                             <li><a href="https://github.com/K-Hendry" target="_blank"></a><i class="fab fa-github"></i></li>
-                            <li><a href="mailto: k.hendry.design@gmail.com" target="_blank"></a><i class="fas fa-envelope-open"></i></li>
+                            <li><a href="mailto:k.hendry.design@gmail.com" target="_blank"></a><i class="fas fa-envelope-open"></i></li>
                             <li><a href="https://www.instagram.com/khendry_designs/" target="_blank"></a><i class="fab fa-instagram"></i></li>
                             <li></li>
                         </ul>
