--- a/Portfolio Site/deploy/portfolio.html
+++ b/Portfolio Site/deploy/portfolio.html
@@ -37,13 +37,22 @@
         </div>
         <div id="header-triangle"></div>
     </header>
-    <section class="content-spacing" id="insta-intro">
-            <h2>like what you see? follow for more.</h2>
+    <section class="content-spacing" id="portfolio intro">
+            <h2>browse by category</h2>
+        </section>
+        <section class="content-spacing" id="portfolio featured">
+            <h2>or by featured</h2>
+            <ul>
+                <li><img src="img/portfolio/liteq.jpg" alt="collabs" id="g1"></li>
+                <li><img src="img/portfolio/poster.jpg" alt="me" id="g2"></li>
+                <li><img src="img/portfolio/arch.png" alt="me" id="g3"></li>
+                <li><img src="img/portfolio/photo.jpg" alt="me" id="g4"></li>
+            </ul>
         </section>
     <footer class="content-spacing">
             <div id="footer-triangle"><img src="img/footer/white-logo.svg" alt="logo"></div>
                 <div id="footer-links">
-                    <ul>
+                    <ul id="icons">
                         <li><a href="www.linkedin.com/in/kelsey-hendry" target="_blank"></a><i class="fab fa-linkedin-in"></i></li>
                         <li><a href="https://github.com/K-Hendry" target="_blank"></a><i class="fab fa-github"></i></li>
                         <li><a href="mailto:k.hendry.design@gmail.com" target="_blank"></a><i class="fas fa-envelope-open"></i></li>
