--- a/Portfolio Site/deploy/contact.html
+++ b/Portfolio Site/deploy/contact.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab&family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/cc1d13b90b.js" crossorigin="anonymous"></script>
+<!-- Tiny Slider -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
+<!--[if (lt IE 9)]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.helper.ie8.js"></script><![endif]-->
 
     <link rel="stylesheet" href="css/styles.css">
     <title>K Hendry Art & Design</title>
@@ -43,6 +46,9 @@
                 <!-- Greensock -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
             <script src="js/scripts-min.js"></script>
+            
+                <!-- Tiny Slider -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <footer class="content-spacing">
                 <div id="footer-triangle"><img src="img/footer/white-logo.svg" alt="logo"></div>
                     <div id="footer-links">
