--- a/Portfolio Site/deploy/portfolio.html
+++ b/Portfolio Site/deploy/portfolio.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab&family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/cc1d13b90b.js" crossorigin="anonymous"></script>
+<!-- Tiny Slider -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
+<!--[if (lt IE 9)]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.helper.ie8.js"></script><![endif]-->
 
     <link rel="stylesheet" href="css/styles.css">
     <title>K Hendry Art & Design</title>
@@ -39,14 +42,23 @@
     </header>
     <section class="content-spacing" id="portfolio intro">
             <h2>browse by category</h2>
+            <section class="subcontent-spacing" id="category slides">
+                <div>
+                    <section class="my-slider">
+                        <div><img src="img/portfolio/mag.jpg" alt="slide 1"></div>
+                        <div><img src="img/portfolio/brand.jpg" alt="slide 2"></div>
+                        <div><img src="img/portfolio/bert.jpg" alt="slide 3"></div>
+                    </section>
+                </div>
+            </section>
         </section>
         <section class="content-spacing" id="portfolio featured">
             <h2>or by featured</h2>
-            <ul>
-                <li><img src="img/portfolio/liteq.jpg" alt="collabs" id="g1"></li>
-                <li><img src="img/portfolio/poster.jpg" alt="me" id="g2"></li>
-                <li><img src="img/portfolio/arch.png" alt="me" id="g3"></li>
-                <li><img src="img/portfolio/photo.jpg" alt="me" id="g4"></li>
+            <ul id="featured">
+                <li class="subcontent-spacing"><img src="img/portfolio/liteq.jpg" alt="collabs" id="g1"></li>
+                <li class="subcontent-spacing"><img src="img/portfolio/poster.jpg" alt="me" id="g2"></li>
+                <li class="subcontent-spacing"><img src="img/portfolio/arch.png" alt="me" id="g3"></li>
+                <li class="subcontent-spacing"><img src="img/portfolio/photo.jpg" alt="me" id="g4"></li>
             </ul>
         </section>
     <footer class="content-spacing">
@@ -67,6 +79,9 @@
                     <!-- Greensock -->
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
                 <script src="js/scripts-min.js"></script>
+                
+                    <!-- Tiny Slider -->
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 
 
 </body>
