switched images for higher res

--- a/Portfolio Site/deploy/portfolio.html
+++ b/Portfolio Site/deploy/portfolio.html
@@ -42,7 +42,7 @@
     </header>
     <section class="content-spacing" id="portfolio intro">
             <h2>browse by category</h2>
-            <section class="subcontent-spacing" id="category slides">
+            <section class="subcontent-spacing" id="category-slides">
                 <div>
                     <section class="my-slider">
                         <div><img src="img/portfolio/mag.jpg" alt="slide 1"></div>
@@ -52,7 +52,7 @@
                 </div>
             </section>
         </section>
-        <section class="content-spacing" id="portfolio featured">
+        <section class="content-spacing" id="portfolio-featured">
             <h2>or by featured</h2>
             <ul id="featured">
                 <li class="subcontent-spacing"><img src="img/portfolio/liteq.jpg" alt="collabs" id="g1"></li>
