--- a/Portfolio Site/deploy/about.html
+++ b/Portfolio Site/deploy/about.html
@@ -40,18 +40,23 @@
         </div>
         <div id="header-triangle"></div>
     </header>
-    <section class="content-spacing" id="about-text">
+    <section id="about">
+            <section class="content-spacing" id="googlemap"></section>
+        <section id="about-heading" class="subcontent-spacing">
             <h2>behind the screens</h2>
+        </section>
+        <section id="para">
             <p>Hey! I’m Kelsey and I’m a graphic designer from Philadelphia. I am currently an undergraduate at Drexel University, where I study graphic design and minors in communications and fine art. I have experience in branding, social media marketing, logo design, publication and poster design, as well as some background in HTML and CSS. In my free time I can be found wandering with my camera, looking for my next shot, or hanging out with my dog, Penny. I have a strong background in communications and writing and I love working with clients to achieve a product we can both feel proud of. </p>
         </section>
-        <section id="googlemap"></section>
-        <section id="resume">
+        <section id="resume" class="subcontent-spacing">
             <h3>you can also download my resume</h3>
             <form method="get" action="file.doc">
                 <button type="submit">here!</button>
             </form>
              <button type="submit" onclick="window.open('file.doc')">Download!</button>
         </section>
+        </section>
+        
     <footer class="content-spacing">
             <div id="footer-triangle"><img src="img/footer/white-logo.svg" alt="logo"></div>
                 <div id="footer-links">
