created class for headings

--- a/Portfolio Site/deploy/about.html
+++ b/Portfolio Site/deploy/about.html
@@ -42,7 +42,7 @@
     </header>
     <section id="about">
             <section class="content-spacing" id="googlemap"></section>
-        <section id="about-heading" class="subcontent-spacing">
+        <section id="about-heading" class="subcontent-spacing header-space" >
             <h2>behind the screens</h2>
         </section>
         <section id="para">
