--- a/Portfolio Site/deploy/insta.html
+++ b/Portfolio Site/deploy/insta.html
@@ -40,7 +40,7 @@
         </div>
         <div id="header-triangle"></div>
     </header>
-    <section class="content-spacing" id="insta-intro">
+    <section class="content-spacing header-space" id="insta-intro">
             <h2>like what you see? follow for more.</h2>
         </section>
     <footer class="content-spacing">
