--- a/Portfolio Site/deploy/portfolio.html
+++ b/Portfolio Site/deploy/portfolio.html
@@ -40,8 +40,8 @@
         </div>
         <div id="header-triangle"></div>
     </header>
-    <section class="content-spacing" id="portfolio intro">
-            <h2>browse by category</h2>
+    <section class="content-spacing" id="portfolio-intro">
+            <h2 class="header-space">browse by category</h2>
             <section class="subcontent-spacing" id="category-slides">
                 <div>
                     <section class="my-slider">
@@ -53,7 +53,7 @@
             </section>
         </section>
         <section class="content-spacing" id="portfolio-featured">
-            <h2>or by featured</h2>
+            <h2 class="header-space">or by featured</h2>
             <ul id="featured">
                 <li class="subcontent-spacing"><img src="img/portfolio/liteq.jpg" alt="collabs" id="g1"></li>
                 <li class="subcontent-spacing"><img src="img/portfolio/poster.jpg" alt="me" id="g2"></li>
