--- a/Portfolio Site/deploy/insta.html
+++ b/Portfolio Site/deploy/insta.html
@@ -45,6 +45,13 @@
     <section class="content-spacing header-space" id="insta-intro">
             <h2>like what you see? follow for more.</h2>
         </section>
+        <section class="subcontent-spacing">
+            <div>
+                <script src="https://assets.juicer.io/embed.js" type="text/javascript"></script>
+                <link href="https://assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
+                <ul class="juicer-feed" data-feed-id="khendry_designs"><h1 class="referral"><a href="https://www.juicer.io">Powered by Juicer.io</a></h1></ul>
+            </div>
+        </section>
     <footer class="content-spacing">
             <div id="footer-triangle"><img src="img/footer/white-logo.svg" alt="logo"></div>
                 <div id="footer-links">
