Josh is better at figuring out shapes than I am - Button diamonds

--- a/Portfolio Site/deploy/about.html
+++ b/Portfolio Site/deploy/about.html
@@ -20,61 +20,9 @@
 <body>
 
         <header class=".grid-container">
-<<<<<<< Updated upstream
         <div>
             <section id="name">
                 <p>K Hendry Art & Design</p>
-=======
-            <div>
-                <section id="name">
-                    <p>K Hendry Art & Design</p>
-                </section>
-                <section id="logo-container">
-                    <a href="home.html"><img src="img/header/logo.svg" alt="logo"></a>
-    
-                </section>
-                <section id="burger-container">
-                    <i class="fas fa-bars" id="burger"></i>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 110 112">
-                        <g id="UI-Kit" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                          <g id="burger" fill="#000">
-                            <rect id="bottom" x="27" y="72" width="57" height="8" rx="4"/>
-                            <rect id="middle" x="27" y="52" width="57" height="8" rx="4"/>
-                            <rect id="top" x="27" y="32" width="57" height="8" rx="4"/>
-                          </g>
-                        </g>
-                      </svg>
-                </section>
-                <nav id="nav-container" data-nav="main-navigation">
-                    <ul>
-                        <li><a href="section-2">home</a></li>
-                        <li><a href="section-4">about</a></li>
-                        <li><a href="section-5">portfolio</a></li>
-                        <li><a href="section-6">instagram</a></li>
-                        <li><a href="section-8">contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div id="header-triangle"></div>
-        </header>
-    <nav id="main-nav">
-            <ul>
-                <li><a href="about.html">about</a></li>
-                <li><a href="portfolio.html">portfolio</a></li>
-                <li><a href="insta.html">instagram</a></li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
-        </nav> 
-    <section id="about">
-                <section class="content-spacing" id="googlemap">
-                    <div id="map-shape">
-                        <div id="diamond"></div>
-                        <div id="map"></div>
-                    </div>
-                </section>
-            <section id="about-heading" class="subcontent-spacing header-space" >
-                <h2>behind the screens</h2>
->>>>>>> Stashed changes
             </section>
             <section id="logo-container">
                 <img src="img/header/logo.svg" alt="logo">
@@ -96,7 +44,8 @@
     </header>
     <section id="about">
             <section class="content-spacing" id="googlemap">
-                <div>
+                <div id="map-shape">
+                    <div id="diamond"></div>
                     <div id="map"></div>
                 </div>
             </section>
@@ -111,7 +60,7 @@
             <form method="get" action="file.doc">
                 <button type="submit">here!</button>
             </form>
-             <button type="submit" onclick="window.open('file.doc')">Download!</button>
+             <button type="submit" onclick="window.open('file.doc')" id="dmd">Download!</button>
         </section>
         </section>
         
